// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests avatar with icon component renders avatar with icon custom style 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgba(35, 47, 72, 1)",
        "borderRadius": 16,
        "height": 32,
        "width": 32,
      },
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {
        "marginLeft": 8,
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      Array [
        Object {
          "color": "#757575",
          "fontSize": 22.4,
        },
        undefined,
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    󰁍
  </Text>
</View>
`;

exports[`tests avatar with icon component renders avatar with icon with backgroundColor 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "royalblue",
        "borderRadius": 16,
        "height": 32,
        "width": 32,
      },
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      Array [
        Object {
          "color": "#757575",
          "fontSize": 22.4,
        },
        undefined,
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    󰁍
  </Text>
</View>
`;

exports[`tests avatar with icon component renders avatar with icon with color 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgba(35, 47, 72, 1)",
        "borderRadius": 16,
        "height": 32,
        "width": 32,
      },
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      Array [
        Object {
          "color": "orange",
          "fontSize": 22.4,
        },
        undefined,
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    󰁍
  </Text>
</View>
`;

exports[`tests avatar with icon component renders avatar with icon with name and type 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgba(35, 47, 72, 1)",
        "borderRadius": 16,
        "height": 32,
        "width": 32,
      },
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      Array [
        Object {
          "color": "#757575",
          "fontSize": 22.4,
        },
        undefined,
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    󰁍
  </Text>
</View>
`;

exports[`tests avatar with icon component renders avatar with icon with size 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgba(35, 47, 72, 1)",
        "borderRadius": 22.5,
        "height": 45,
        "width": 45,
      },
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      Array [
        Object {
          "color": "#757575",
          "fontSize": 31.499999999999996,
        },
        undefined,
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    󰁍
  </Text>
</View>
`;

exports[`tests avatar with icon component renders icon with custom icon  1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgba(35, 47, 72, 1)",
        "borderRadius": 16,
        "height": 32,
        "width": 32,
      },
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      Array [
        Object {
          "color": "#757575",
          "fontSize": 22.4,
        },
        undefined,
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    󰁍
  </Text>
</View>
`;
